--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,11 +4,14 @@
 
 {% block content %}
 <div class="main-content main-content-list container">
+{% for  recipe in recipes %}
+    {% include 'recipes/partials/recipe.html' %}
+{% empty %}
+    <div class="center m-y">
+        <h1>No recipes found here 😥</h1>
+    </div>
+{% endfor %}
 
-    {% for recipe in recipes %}
-          
-    {%include 'recipes/partials/recipe.html'%}
    
-    {% endfor %}
 </div>
 {% endblock content %}
