--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -3,14 +3,14 @@
 {% block title %}Login | {% endblock title %}
 
 {% block content %}
-    <div class="main-content center container">
-        <h2>Login</h2>
-    </div>
+  <div class="main-content center container">
+    <h2>Login</h2>
+    {% include 'authors/partials/login_message.html' %}
+  </div>
 
-    
-    {% include 'global/partials/messages.html' %}
+  {% include 'global/partials/messages.html' %}
+
+  {% if not user.is_authenticated %}
     {% include 'global/partials/form.html' %}
-
-
- 
+  {% endif %}
 {% endblock content %}
