--- a/base_templates/global/partials/footer.html
+++ b/base_templates/global/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="main-footer">
-    <div class="developer">
-      <a href="https://br.linkedin.com/in/estev%C3%A3o-ferreira-pequeno-387584165" target="_blank" rel="noreferrer noopener">By Estevão Ferreira</a>
-    </div>
-  
-    <div class="powered">
-      <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer noopener">Powered by Django</a>
-    </div>
-  </footer> 
+  <div class="developer">
+    <a href="https://www.otaviomiranda.com.br/" target="_blank" rel="noreferrer noopener">By Estevão Ferreira</a>
+  </div>
+
+  <div class="powered">
+    <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer noopener">Powered by Django</a>
+  </div>
+</footer>
